<resources>
    <string name="app_name">Weather Station</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="click">Click</string>
    <string name="temperature">Temperature</string>
    <string name="c">°C</string>
    <string name="moisture">Moisture</string>
    <string name="refresh">Refresh</string>
    <string name="humidity">Humidity</string>
    <string name="_0">0</string>
    <string name="rainfall">Rainfall</string>
    <string name="device">Device: </string>
    <string name="relay_status">Relay Status: </string>
    <string name="date_time">Date: </string>
    <string name="minutes_ago">minutes ago</string>
    <string name="mgh0">MGH0</string>
    <string name="ws0">WS0</string>
    <string name="wind_direction">Wind Direction: </string>
    <string name="wind_speed">Wind Speed</string>
    <string name="m">m³</string>
    <string name="mm">mm</string>
    <string name="percent">%</string>
    <string name="mph">mph</string>
    <string name="kph">km/h</string>
    <string name="updated">Last Updated:</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="date">Time: </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="f">°F</string>
    <string name="address">Kathmandu, Nepal</string>
    <string name="github_link">Source Code on GitHub (Coming Soon)</string>
    <string name="send_feedback">Send Feedback by Email</string>
    <string name="feedback_title">If you liked the app, feel free to give a feedback!</string>
    <string name="line">|</string>
    <string name="soil_temperature">Soil Temperature</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="forecast">Forecast</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_a_suggestion">Send a suggestion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graph_analysis">Graph Analysis</string>

</resources>
